<resources>
    <string name="app_name">Calculator</string>
    <string name="button_00">00</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_equal">=</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_devide">X</string>
    <string name="button_subtract">/</string>
    <string name="button_history">HISTORY</string>
    <string name="button_delete">DELETE</string>
    <string name="button_clearAll">C</string>
    <string name="button_point">.</string>
    <string name="madd">M+</string>
    <string name="msub">M-</string>
    <string name="mrecal">MR</string>
    <string name="mclear">MC</string>
</resources>
