<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hr.pial.calculator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#132333"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:paddingRight="20px"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17dp"
                android:text=""
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:gravity="bottom|end"
                android:textColor="@color/text1Color"
                android:textAlignment="textEnd"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textEnd"
                android:textSize="40dp"
                android:maxLines="1"
                android:maxLength="10"
                android:layout_gravity="center"
                android:gravity="top|end"
                android:textColor="@color/text1Color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px">
            <TextView
                android:id="@+id/madd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="25dp"
                android:text="@string/madd"
                android:textColor="@color/text1Color"
                android:background="@drawable/button_background3"/>

            <TextView
                android:id="@+id/msub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="25dp"
                android:text="@string/msub"
                android:textColor="@color/text1Color"
                android:background="@drawable/button_background3"/>
            <TextView
                android:id="@+id/mclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="25dp"
                android:text="@string/mclear"
                android:textColor="@color/text1Color"
                android:background="@drawable/button_background3"/>
            <TextView
                android:id="@+id/mrecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="25dp"
                android:text="@string/mrecal"
                android:textColor="@color/text1Color"
                android:background="@drawable/button_background3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/clearAll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_clearAll"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="@string/button_history"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_00"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_00"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_delete"
                    android:textSize="18dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_7"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_8"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_9"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_multi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_devide"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_4"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_5"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_6"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_devide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_subtract"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_1"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_2"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_3"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_sub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_sub"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/button_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_point"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_0"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background2"
                    android:textColor="@color/text2Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_equal"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_add"
                    android:textSize="40dp"
                    android:layout_margin="2.5px"
                    android:background="@drawable/button_background"
                    android:textColor="@color/text1Color"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
